--- a/boldgrid-theme-framework/assets/scss/components/_util.scss
+++ b/boldgrid-theme-framework/assets/scss/components/_util.scss
@@ -45,3 +45,11 @@ iframe.boldgrid-google-maps,
 .boldgrid-google-maps iframe {
 	max-width: 100%;
 }
+/*--------------------------------------------------------------
+# Buttons
+--------------------------------------------------------------*/
+.btn,
+.button-primary,
+.button-secondary {
+    white-space: nowrap;
+}
